--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -9,6 +9,16 @@ jobs:
   license_check:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.14.2'
+      - name: Checkout Ref
+        uses: actions/checkout@v1
+      - name: Install dependencies
+        run: npm install
+      - name: Generate license-checker CSV file
+        run: license-checker --start --production --csv
       - name: Check license-checker CSV file without headers
         id: license_check_report
         uses: pilosus/action-pip-license-checker@v2
