--- a/package.json
+++ b/package.json
@@ -73,16 +73,17 @@
     "eslint": "^8.1.0",
     "eslint-plugin-es": "^4.1.0",
     "jsdoc": "^3.6.10",
+    "license-checker": "^25.0.1",
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
     "outdent": "^0.8.0",
     "rollup": "^2.78.1",
     "rollup-plugin-copy": "^3.4.0",
+    "sinon": "^15.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "xhr-mock": "^2.5.1",
-    "xmlhttprequest": "^1.8.0",
-    "sinon": "^15.0.3"
+    "xmlhttprequest": "^1.8.0"
   },
   "mocha": {
     "extension": [
@@ -99,5 +100,8 @@
     "exclude": [
       "**/*.test.js"
     ]
+  },
+  "dependencies": {
+    "yui-lint": "^0.2.0"
   }
 }
