--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -26,7 +26,7 @@ jobs:
           external: 'npm-license-checker.csv'
           external-format: 'csv'
           external-options: '{:skip-header true}'
-          fail: 'StrongCopyleft,NetworkCopyleft,Other,Error,MIT'
+          fail: 'StrongCopyleft,NetworkCopyleft,Other,Error'
           fails-only: true
           exclude: 'evolv-ai*,SentientTechnologies*'
           exclude-license: '(?i)copyright'
